# udisks-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  UDisks-2.0.gir  org.freedesktop.UDisks2.xml
.github/workflows/: ci.yaml
examples/: dev.rs  disk_sizes.rs  unmount-udisks.rs
src/: ata.rs  block.rs  client.rs  drive.rs  encrypted.rs  error.rs  fabrics.rs  filesystem.rs  gettext.rs  id.rs  job.rs  lib.rs  loop.rs  manager.rs  mdraid.rs  media.rs  nvme.rs  object.rs  object_info.rs  partition.rs  partition_subtypes.rs  partition_types.rs  partitiontable.rs  swapspace.rs
src/nvme/: controller.rs  fabrics.rs  mod.rs  namespace.rs
udisks/: Cargo.toml  Gir.toml
udisks/src/: lib.rs
udisks/src/auto/: block.rs  block_lvm2.rs  block_lvm2_proxy.rs  block_lvm2_skeleton.rs  block_proxy.rs  block_skeleton.rs  client.rs  drive.rs  drive_ata.rs  drive_ata_proxy.rs  drive_ata_skeleton.rs  drive_proxy.rs  drive_skeleton.rs  encrypted.rs  encrypted_proxy.rs  encrypted_skeleton.rs  enums.rs  filesystem.rs  filesystem_btrfs.rs  filesystem_btrfs_proxy.rs  filesystem_btrfs_skeleton.rs  filesystem_proxy.rs  filesystem_skeleton.rs  flags.rs  job.rs  job_proxy.rs  job_skeleton.rs  logical_volume.rs  logical_volume_proxy.rs  logical_volume_skeleton.rs  loop_.rs  loop_proxy.rs  loop_skeleton.rs  manager.rs  manager_btrfs.rs  manager_btrfs_proxy.rs  manager_btrfs_skeleton.rs  manager_lvm2.rs  manager_lvm2_proxy.rs  manager_lvm2_skeleton.rs  (+30 more)
udisks/udisks-sys/: Cargo.toml  Gir.toml  build.rs
udisks/udisks-sys/src/: lib.rs
udisks/udisks-sys/src/auto/: versions.txt
udisks/udisks-sys/tests/: abi.rs  constant.c  layout.c  manual.h
