[package]
name = "udisks2"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
description = " Unofficial crate for interacting with the UDisks2 API"
readme = "README.md"
license = "LGPL-2.1"
repository = "https://github.com/FineFindus/udisks-rs"
keywords = ["udisks", "udisks2", "manipulating-disk", "storage"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]

[dependencies]
zbus = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1.18"
enumflags2 = { version = "0.7.9", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.36", features = ["full"] }
