[package]
name = "udisks2"
version = "0.3.1"
edition = "2021"
# also update MSRV requirement in .github/workflows/ci/yaml
rust-version = "1.80"
description = " Unofficial crate for interacting with the UDisks2 API"
readme = "README.md"
license = "LGPL-2.1"
repository = "https://github.com/FineFindus/udisks-rs"
keywords = ["udisks", "udisks2", "manipulating-disk", "storage"]
categories = ["api-bindings", "hardware-support", "os::linux-apis"]

[dependencies]
zbus = "5.2"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
enumflags2 = { version = "0.7", features = ["serde"] }
gettext-rs = { version = "0.7", features = ["gettext-system"] }

[dev-dependencies]
tokio = { version = "1.42", features = ["full"] }
