[package]
name = "udisks-sys"
version = "0.0.1"
edition = "2021"
build = "build.rs"

[package.metadata.system-deps.udisks2]
name = "udisks2"
version = "2"

[package.metadata.system-deps.udisks2.v2_1]
version = "2.1"

[package.metadata.system-deps.udisks2.v2_1_1]
version = "2.1.1"

[package.metadata.system-deps.udisks2.v2_1_3]
version = "2.1.3"

[package.metadata.system-deps.udisks2.v2_1_7]
version = "2.1.7"

[package.metadata.system-deps.udisks2.v2_3]
version = "2.3"

[package.metadata.system-deps.udisks2.v2_6_3]
version = "2.6.3"

[package.metadata.system-deps.udisks2.v2_7_1]
version = "2.7.1"

[package.metadata.system-deps.udisks2.v2_7_2]
version = "2.7.2"

[package.metadata.system-deps.udisks2.v2_7_3]
version = "2.7.3"

[package.metadata.system-deps.udisks2.v2_8]
version = "2.8"

[package.metadata.system-deps.udisks2.v2_9]
version = "2.9"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
rustdoc-args = ["--cfg", "docsrs", "--generate-link-to-definition"]
all-features = true

[lib]
name = "udisks_sys"

[dependencies]
libc = "0.2"

[dependencies.glib]
package = "glib-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gobject]
package = "gobject-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[dependencies.gio]
package = "gio-sys"
git = "https://github.com/gtk-rs/gtk-rs-core"

[build-dependencies]
system-deps = "6"

[dev-dependencies]
shell-words = "1.0.0"
tempfile = "3"

[features]
v2_1 = []
v2_1_1 = ["v2_1"]
v2_1_3 = ["v2_1_1"]
v2_1_7 = ["v2_1_3"]
v2_3 = ["v2_1_7"]
v2_6_3 = ["v2_3"]
v2_7_1 = ["v2_6_3"]
v2_7_2 = ["v2_7_1"]
v2_7_3 = ["v2_7_2"]
v2_8 = ["v2_7_3"]
v2_9 = ["v2_8"]
